Use network-modification-library (#561)
Signed-off-by: Ayoub LABIDI <ayoub.labidi@protonmail.com>